# sitemap_generator

./: .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: sitemap_benchmarks.rs
docs/: MEMORY_SAFETY.md  PERFORMANCE.md  PROJECT_SUMMARY.md
examples/: basic_sitemap.rs  combined_sitemap.rs  compression_test.rs  flamegraph_profile.rs  image_sitemap.rs  memory_demo.rs  news_sitemap.rs  sitemap_index.rs  video_sitemap.rs  web_framework_usage.rs
src/: builder.rs  error.rs  lib.rs  parser.rs  types.rs  validator.rs  writer.rs
tests/: integration_tests.rs
